# SSD_project

./: .gitignore  Dockerfile  Dockerfile.jupyter  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  settings.ini  settings.py
controlers/: controler.py
model/: image.py  ssd.py
utils/: match.py  utils.py
